# EAS508-Statistics

./: .gitignore  README.md  postbuild.sh  pyproject.toml
.devcontainer/: Dockerfile.hold  devcontainer.json
data/performance/explainability/global/: lightgbm_mean_contribution_top25.csv  lightgbm_permutation_importance.csv
data/performance/explainability/local/: lightgbm_local_contribution_latest_top50.csv
data/performance/metrics/global/: model_holdout_results.csv
data/processed/: model_commodity_rolling_summary.csv  model_commodity_vs_seasonal_naive.csv  model_holdout_results.csv  model_rolling_summary.csv  model_vs_seasonal_naive.csv  monthly_panel.csv  monthly_panel_1980.csv  sarimax_holdout_results.csv  sarimax_rolling_summary.csv
data/raw/: climate_disaster_monthly.csv  futures_monthly.csv  macro_monthly.csv  macro_monthly_1980.csv  price_proxy_monthly.csv
project_submissions/: extractdata.ipynb
scripts/: build_monthly_panel.ipynb  build_monthly_panel.py  download_climate_disaster.ipynb  download_climate_disaster.py  download_futures.ipynb  download_futures.py  download_macro_fred.ipynb  download_macro_fred.py  extractdata.ipynb  ml_response_feature_exploration.ipynb  monthly_pipeline.ipynb  monthly_pipeline_1980.ipynb  run_pipeline.ipynb  run_pipeline.py
scripts/data/processed/: monthly_panel.csv
scripts/data/raw/: climate_disaster_monthly.csv  macro_monthly.csv
scripts/scripts/data/raw/: climate_disaster_monthly.csv  futures_monthly.csv
