[project]
name = "ert574"
version = "0.1.0"
description = "Course materials for ERT574"
authors = [
    { name = "Yifan Cheng" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "xarray",
    "dask",
    "netcdf4",
    "zarr",
    "fsspec",
    "aiohttp",
    "pooch",
    "fiona",
    "pyogrio",
    "geopandas",
    "rioxarray",
    "cartopy",
    "holoviews",
    "geoviews",
    "jupyter",
    "jupyterlab",
    "pip",
    "mamba",
    "matplotlib",
    "scipy",
]
